# secp256k10

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
coq/: quotient.v
examples/host/: Cargo.toml
examples/host/src/: main.rs
examples/methods/: Cargo.toml
examples/methods/guest/: Cargo.toml
examples/methods/guest/src/: main.rs
secp256k10-guest/: Cargo.toml
secp256k10-guest/src/: evaluator.rs  hinter.rs  lib.rs  table.rs  utils.rs
secp256k10-host/: Cargo.toml
secp256k10-host/src/: evaluator.rs  hinter.rs  integration_test.rs  lib.rs  signer.rs  table_generation.rs  utils.rs
